--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
+    "formik": "^2.4.6",
+    "joi": "^17.13.3",
+    "jwt-decode": "^4.0.0",
     "react-bootstrap": "^2.10.10",
     "react-icons": "^5.5.0",
     "react-router": "^7.6.1",
     "react-slick": "^0.30.3",
+    "react-toast": "^1.0.3",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
