--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "joi": "^17.13.3",
     "jwt-decode": "^4.0.0",
     "react-bootstrap": "^2.10.10",
+    "react-dropzone": "^14.3.8",
     "react-icons": "^5.5.0",
     "react-router": "^7.6.1",
     "react-slick": "^0.30.3",
