--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^8.15.0",
     "morgan": "^1.10.0",
     "multer": "^2.0.0",
+    "nodemailer": "^7.0.5",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0"
   }
